made site look better, fixed some issues on mobile resolutions.

--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,8 @@
 }
 
 body {
-    background-color: #f8f4e1;
-    color: #4e3620;
+    background-color: white;
+    color: rgba(43,43,43);
 }
 
 html {
@@ -27,7 +27,7 @@ html {
     display: flex;
     justify-content: left;
     flex-direction: row;
-    background-color: #897853;
+    background-color: rgba(23,23,23);
     height: 7vh;
     width: 100vw;
     font-size: 2rem;
@@ -42,7 +42,7 @@ html {
 
 .nav-bar-link {
     text-decoration: none;
-    color: #4e3620;
+    color: white;
     font-weight: bold;
     opacity: 0.8;
 }
@@ -81,7 +81,7 @@ html {
 body hr {
     margin-bottom: 0;
     margin-top: 0;
-    color: #4e3620;
+    color: black;
 }
 
 #welcome-section h2 {
@@ -118,19 +118,33 @@ body hr {
 .description {
     font-size: 1.2rem;
     margin-top: 0;
-    max-width: 33vw;
-    text-align: center;
+    max-width: 40vw;
     margin-bottom: 2rem;
 }
 
 .project-image {
-    height: 6vw;
+    height: 10vh;
     align-self: center;
 }
 
 @media (max-width: 600px) {
-    .project-description {
-        max-width: 70vw;
+    #welcome-section h1 {
+        font-size: 6rem;
+    }
+
+    .description {
+        max-width: 80vw;
+        align-self: center;
+    }
+
+    .head {
+        align-self: center;
+        font-size: 3rem;
+    }
+
+    #contact .contacts {
+        font-size: 1.7rem;
+        max-width: 90vw;
     }
 }
 
